--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,8 @@ RewriteRule ^blog?$ blog.php
 RewriteRule ^admin?$ admin.php
 RewriteRule ^post-blog?$ blog_post.php
 RewriteRule ^blog-list?$ blog_list.php
+RewriteRule ^event_support?$ event_support.php
+RewriteRule ^event_management?$ event_management.php
 
 # php -- BEGIN cPanel-generated handler, do not edit
 # Set the “ea-php71” package as the default “PHP” programming language.
